Date Range Filtering
Data is filtered by date ranges.

--- a/homepage.html
+++ b/homepage.html
@@ -11,9 +11,7 @@
     <script type="text/javascript" src="jquery.flot.js"></script>
     <script type="text/javascript" src="jquery.flot.time.js"></script>
     <script type="text/javascript" src="jquery.flot.pie.js"></script>
-    <script type="text/javascript" src="buzzik.js">
-            visualizeDataset();
-    </script>
+    <script type="text/javascript" src="buzzik.js"></script>
     <script type="text/javascript" src="ical.js"></script>
 </head>
 <body>
@@ -100,7 +98,7 @@
                     <div class="spacer-10"></div>
                     <div class="left-15">
                         <button id="select-none" class="btn btn-5" value="noFilter" onclick='switchFilter("none", "select-none")'>
-                                No Filter
+                                Date
                         </button>
                         <!-- <button id="select-artist" class="btn btn-5" value="artist" onclick='switchFilter("artist", "select-artist")'>
                                 Artist
