Brought artist sorting back.

--- a/homepage.html
+++ b/homepage.html
@@ -100,9 +100,9 @@
                         <button id="select-none" class="btn btn-5" value="noFilter">
                                 Date
                         </button>
-                        <!-- <button id="select-artist" class="btn btn-5" value="artist">
+                        <button id="select-artist" class="btn btn-5" value="artist">
                                 Artist
-                        </button> -->
+                        </button>
                         <button id="select-title" class="btn btn-5" value="title">
                                 Song Title
                         </button>
