Added export button functionality using template code

--- a/homepage.html
+++ b/homepage.html
@@ -125,7 +125,7 @@
 			</div>
 
 			<div id="options-container">
-				<button class="btn btn-6">Export</button>
+				<button class="btn btn-6" onclick="exportBtn()">Export</button>
 				<button id="open-calendar" class="btn btn-6">Upload Calendar</button>
 				<!-- <button class="btn btn-6">Upload</button> -->
 				<button class="btn btn-6">Night</button>
