--- a/homepage.html
+++ b/homepage.html
@@ -69,6 +69,8 @@
 							</tr>
 						</table>
 					</div>
+
+					<div id="graph-control-range-error"></div>
 				</div>
 
 				<div class="spacer-20"></div>
@@ -122,6 +124,11 @@
 
 			<div id="graph-container">
 				<div id="graph-placeholder"></div>
+
+				<div id="graph-status">
+					<div id="graph-status-message">Loading...</div>
+					<progress id="graph-status-progress" value="50" max="100" />
+				</div>
 			</div>
 
 			<div id="options-container">
