--- a/homepage.html
+++ b/homepage.html
@@ -126,8 +126,8 @@
 				<div id="graph-placeholder"></div>
 
 				<div id="graph-status">
-					<div id="graph-status-message">Loading...</div>
-					<progress id="graph-status-progress" value="50" max="100" />
+					<div id="graph-status-message">Filtering...</div>
+					<progress id="graph-status-progress" value="0" max="100" />
 				</div>
 			</div>
 
