Fixed inline js

--- a/homepage.html
+++ b/homepage.html
@@ -138,7 +138,7 @@
 				<button class="btn btn-6" id="exportBtn">Export</button>
 				<button id="open-calendar" class="btn btn-6">Upload Calendar</button>
 				<!-- <button class="btn btn-6">Upload</button> -->
-				<button class="btn btn-6" onclick="nightMode()">Night</button>
+				<button class="btn btn-6" id="night-mode">Night</button>
 				<button class="btn btn-6 red">Logout</button>
 			</div>
 
