--- a/homepage.html
+++ b/homepage.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="jquery.flot.js"></script>
     <script type="text/javascript" src="jquery.flot.time.js"></script>
     <script type="text/javascript" src="jquery.flot.pie.js"></script>
+    <script type="text/javascript" src="jquery.flot.axislabels.js"></script>
 
     <script type="text/javascript" src="ical.js"></script>
 </head>
