--- a/homepage.html
+++ b/homepage.html
@@ -114,6 +114,15 @@
                         </button>
                     </div>
                 </div>
+                <div id="calendar-imported-dates" style="display:none;">
+                    <div class="emboldend left-15">Calendar Dates:</div>
+                    <div class="separator-line"></div>
+                    <div class="spacer-10"></div>
+                    <div class="left-15">
+                        <ul id = 'dates'>
+                        </ul>
+                    </div>
+                </div>
 			</div>
 
 			<div id="graph-control-refine">
