--- a/homepage.html
+++ b/homepage.html
@@ -121,8 +121,8 @@
                     <div class="left-15">
                         <ul id = 'dates'>
                         </ul>
-                        <button id='decompressor'class='btn btn-4'>Show More:</button>
-                        <button id='compressor'class='btn btn-4' style="display:none;">Show Less:</button>
+                        <button id='decompressor'class='btn btn-4'>Show More</button>
+                        <button id='compressor'class='btn btn-4' style="display:none;">Show Less</button>
                     </div>
                 </div>
 			</div>
