Implemented explicit filter

--- a/homepage.html
+++ b/homepage.html
@@ -112,6 +112,9 @@
                         <button id="select-title" class="btn btn-5" value="title">
                                 Song Title
                         </button>
+												<button id="select-explicit" class="btn btn-5" value="explicit">
+																Explicit
+												</button>
                     </div>
                 </div>
                 <div id="calendar-imported-dates" style="display:none;">
