Updated help text for calendar.

--- a/homepage.html
+++ b/homepage.html
@@ -223,7 +223,7 @@
 	      <div class="panel">
 					<ul class="help-list">
 						<li>
-							TBD
+							Click the "Upload Calendar" button and upload a .ICS file. The dates will show up in the left margin.
 						</li>
 					</ul>
 	      </div>
